# rubberhose

./: ACKNOWLEDGEMENTS  AUTHORS  COPYING  ChangeLog  ENUMAELISH  FAQ  FEATURES  INSTALL  MYTHOLOGY  Makefile.am  Makefile.in  NEWS  PATENTS  README  SECURITY  TODO  acconfig.h  config.h.in  configure  configure.in  mkinstalldirs  unamep  unamep.make
confused/: Makefile.am  Makefile.in  confused.c
doc/: ALGORITHM  ARCHITECTURE  HACKING  Makefile.am  Makefile.in  README-manpages  authors.sgml  copyright.sgml  docbook-intro.html  hose.1  hose.dvi  hose.man  hose.sgml  hose.sgmlp  inc.sgmlh  maruguide.dvi  maruguide.sgml  proff.style  review.html  rfc2040.txt  rfc2144.txt  sergienko.html
doc/hose/: manpage.hose.html
doc/maruguide/: licensing.html  t1.html  x25.html  x32.html  x73.html
hose/: Makefile.am  Makefile.in  hose.c
hosed/: Makefile.am  Makefile.in  block.c  block.ext  block.h  hosed.c  hosed.h
ideas/: EFS-SPKI-certificates  Makefile.am  Makefile.in  cryptographic_deniability  disclosure  keying  timelocks
libmclient/: Makefile.am  Makefile.in  assert.h  block.c  block.ext  block.h  blowfish.c  blowfish.ext  blowfish.h  bsdioctl.h  cast.c  cast.h  cast_sboxes.h  cipher_tests.c  cipher_tests.ext  cipher_tests.h  ciphers.c  ciphers.ext  ciphers.h  client_assert.c  client_assert.ext  client_assert.h  client_common.c  client_common.ext  client_common.h  common.c  common.ext  common.h  conf.c  conf.cf  conf.h  confused_runtime.c  confused_runtime.ext  confused_runtime.h  encoding.c  encoding.ext  encoding.h  getpassphrase.c  getpassphrase.ext  getpassphrase.h  (+67 more)
libproff/: Makefile.am  Makefile.in  libproff.h  pattern.c  pattern.ext  pattern.h  ptime.c  ptime.ext  ptime.h  str.c  str.ext  str.h  utils.c  utils.ext  utils.h
mk/: Makefile.am  Makefile.in  rules.mk.in
mkernel.freebsd/: Makefile.am  Makefile.in  mfreebsd.c  mfreebsd.h  mload.in
mkernel.linux/: Makefile.am  Makefile.in  hose_makedevs.in  hose_modload.in  hose_modunload.in  kanook_linux.c  kue-api.h  kue_linux.c  kue_linux.ext  kue_linux.h  linux_compat.h  maru_linux.c  maru_linux.h  queue.h
mkernel.netbsd/: Makefile.am  Makefile.in  kue.h  lkminit_kue.c  lkminit_maru.c  mnetbsd.h  nbsd_kue.c  nbsd_kue.ext  nbsd_kue.h  nbsd_maru.c  nbsd_maru.ext  nbsd_maru.h
regress/: Makefile.am  Makefile.in  bootstrap.sh  ciphertext.pi.8192.rc16  ciphertext.rand.8192.ssl-rc2-cbc  creation.sh  encryptfile.sh  encryptfilecheck.sh  list_test.c  pi.c  plaintext.pi.8192  plaintext.rand.8192  psycho9.sh
